I added text and some code

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -5,14 +5,20 @@
    "id": "56a82182",
    "metadata": {},
    "source": [
-    "GitHub: https://github.com/vidisha04/02467-CSS.git"
+    "GitHub: https://github.com/vidisha04/02467-CSS.git\n",
+    "Group Members:\n",
+    "* Vidisha Sinha: s204081\n",
+    "* Mads Andersen: s204137"
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
     "# Part 1 - Webscraping the 2019 poster and oral presentations\n",
-    "Now we hav to scrape the two"
+    "Now we hav to scrape the two sessions both the oral and poster, at the same time the following questions will be answered:\n",
+    "1) Inspect the HTML of the pages above and use web-scraping to get the set of participants in 2019. Share your code and add comments to guide us through it.\n",
+    "2) How many unique researchers you got in 2019?\n",
+    "3) Explain one or two decisions you took during the web-scraping exercise, for 2019 or any other year. Why did you take this choice? How might your decision impact the final number of authors?"
    ],
    "metadata": {
     "collapsed": false
@@ -20,14 +26,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "id": "234ad699",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Imports\n",
     "import requests\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "import time\n",
+    "from tqdm import tqdm_notebook"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Scraping the oral presentations\n",
+    "For this session it can be seen from the html that each presentation is marked with the <br> tag, for finding every presentation the ``soup.findall()´´  function can be used."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -51,7 +71,7 @@
     "researchers = [i.previous_sibling for i in researchers]\n",
     "\n",
     "print(researchers)\n",
-    "researchers = researchers[9:]"
+    "researchers = researchers[9:] #Some tags in the beginning are included which can simply be cut out"
    ],
    "metadata": {
     "collapsed": false
@@ -60,7 +80,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Now we have to do some formatting by splitting on punctuations \".\" and dashes \"-\". Also in the last line of the code block we have to go from list og lists to just one list, simutaniously we can remove any whitespaces that may occur in befor each author."
+    "Now some formatting have to be doen by splitting on punctuations \".\" and dashes \"-\". Also in the last line of the code block we have to go from list of lists to just one list, simutaniously one can remove any whitespaces that may occur in befor each author."
    ],
    "metadata": {
     "collapsed": false
@@ -82,7 +102,8 @@
     "      dt.append(j)\n",
     "\n",
     "d = [i.split(',') for i in dt]\n",
-    "d = [item[1:] if item[0] == ' ' else item for sublist in d for item in sublist]"
+    "d = [item[1:] if item[0] == ' ' else item for sublist in d for item in sublist]\n",
+    "d = list(set(d)) # In order to remove duplicates a set of the list can be used"
    ],
    "metadata": {
     "collapsed": false
@@ -102,7 +123,7 @@
     }
    ],
    "source": [
-    "len(set(d))"
+    "len(d) #Check the length of the author list"
    ],
    "metadata": {
     "collapsed": false
@@ -173,7 +194,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Scraping the poster session"
+    "### Scraping the poster session\n",
+    "For this html "
    ],
    "metadata": {
     "collapsed": false
@@ -257,11 +279,277 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "First load the id's which was saved into json file, and then convert it to a dictionary. Note that if the author could not be found it was simply marked it with not found, so first that will have to be sorted out of the data."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "outputs": [],
    "source": [
-    "import json"
+    "author_database = pd.read_json('/Users/mads/CompSocialScience/02467-CSS/author_id_name.json', typ='series').to_dict()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/6z/7x8_jfbd1d568pbs6s2gs1gm0000gn/T/ipykernel_21194/2692894104.py:8: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
+      "  for author in tqdm_notebook(list(author_database.keys())):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/1922 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "6f5033bf805c4dd78d1b0fb200532cfc"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'papers'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[79], line 18\u001B[0m\n\u001B[1;32m     16\u001B[0m r \u001B[38;5;241m=\u001B[39m requests\u001B[38;5;241m.\u001B[39mget(my_url, params\u001B[38;5;241m=\u001B[39mparams)\u001B[38;5;241m.\u001B[39mjson()\n\u001B[1;32m     17\u001B[0m r_count \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1\u001B[39m\n\u001B[0;32m---> 18\u001B[0m rau \u001B[38;5;241m=\u001B[39m [au[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mauthors\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;28;01mfor\u001B[39;00m au \u001B[38;5;129;01min\u001B[39;00m \u001B[43mr\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mpapers\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m]\u001B[49m]\n\u001B[1;32m     20\u001B[0m related_authors[author] \u001B[38;5;241m=\u001B[39m rau\n\u001B[1;32m     22\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m r_count \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m95\u001B[39m:\n",
+      "\u001B[0;31mKeyError\u001B[0m: 'papers'"
+     ]
+    }
+   ],
+   "source": [
+    "BASE_URL = \"https://api.semanticscholar.org/graph/\"\n",
+    "VERSION = \"v1/\"\n",
+    "RESOURCE = \"author/\"\n",
+    "my_url = BASE_URL + VERSION + RESOURCE\n",
+    "related_authors = {}\n",
+    "r_count = 0\n",
+    "\n",
+    "for author in tqdm_notebook(list(author_database.keys())):\n",
+    "\n",
+    "  if author == 'not found':\n",
+    "    continue\n",
+    "\n",
+    "  my_url = f'https://api.semanticscholar.org/graph/v1/author/{author}?fields=papers.authors'\n",
+    "  params = {'authorId': author}\n",
+    "\n",
+    "  r = requests.get(my_url, params=params).json()\n",
+    "  r_count += 1\n",
+    "  rau = [au['authors'] for au in r['papers']]\n",
+    "\n",
+    "  related_authors[author] = rau\n",
+    "\n",
+    "  if r_count > 95:\n",
+    "    time.sleep(60*5+10)\n",
+    "    r_count = 0"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[[{'authorId': '93045599', 'name': 'X. Zhang'},\n  {'authorId': '2117945922', 'name': 'Xia Hong Zhang'},\n  {'authorId': '2054556447', 'name': 'J. Ni'},\n  {'authorId': '9423277', 'name': 'Jiezhen Zhuang'}],\n [{'authorId': '2108484936', 'name': 'Ju Dong Liu'},\n  {'authorId': '9423277', 'name': 'Jiezhen Zhuang'},\n  {'authorId': '98220615', 'name': 'Z. Xu'}],\n [{'authorId': '2144156555', 'name': 'Judong Liu'},\n  {'authorId': '9423277', 'name': 'Jiezhen Zhuang'},\n  {'authorId': '9155250', 'name': 'Jinkui Xiong'}],\n [{'authorId': '9423277', 'name': 'Jiezhen Zhuang'},\n  {'authorId': '120095768', 'name': 'L. Liu'},\n  {'authorId': '2207001255', 'name': 'Y.Z. Zhang'}],\n [{'authorId': '2108484936', 'name': 'Ju Dong Liu'},\n  {'authorId': '9423277', 'name': 'Jiezhen Zhuang'},\n  {'authorId': '6104513', 'name': 'S. Huang'}],\n [{'authorId': '120095768', 'name': 'L. Liu'},\n  {'authorId': '9423277', 'name': 'Jiezhen Zhuang'},\n  {'authorId': '2152504310', 'name': 'Chao Liu'}],\n [{'authorId': '120095768', 'name': 'L. Liu'},\n  {'authorId': '9423277', 'name': 'Jiezhen Zhuang'},\n  {'authorId': '2207102236', 'name': 'S.W. Huang'},\n  {'authorId': '98220615', 'name': 'Z. Xu'}],\n [{'authorId': '2108484936', 'name': 'Ju Dong Liu'},\n  {'authorId': '9423277', 'name': 'Jiezhen Zhuang'},\n  {'authorId': '2108287516', 'name': 'Xi Zhang'},\n  {'authorId': '98220615', 'name': 'Z. Xu'}],\n [{'authorId': '2144156555', 'name': 'Judong Liu'},\n  {'authorId': '9423277', 'name': 'Jiezhen Zhuang'},\n  {'authorId': '2072433', 'name': 'Zhilong Xu'}]]"
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rau"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "outputs": [],
+   "source": [
+    "my_url = f'https://api.semanticscholar.org/graph/v1/author/{author}?fields=papers.authors'\n",
+    "params = {'authorId': author}\n",
+    "r = requests.get(my_url, params=params).json()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'message': 'Too Many Requests'}"
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Get the papper and the the other required entrances\n",
+    "We choose to do a subset due to resource limitations. However the code demonstrates how the querying could be done, given enough time. Note that there is a 100 request limitation per 5 min, which is why a counter is initialized and incremented everytime a request is made to the server. When the limitation is reached the time module is used to make the loop wait for 5 minutes. To be on the safe side the number of requests is set to 95 and 10 seconds are added to the timer pause.\n",
+    "\n",
+    "Exercises which needs to be solved\n",
+    "1) Share the number of authors you will use as starting point in this exercises. Add a comment clarifying how many IC2S2 editions you included and if the collaborators were included or not.\n",
+    "2) Share the code you have used to solve the exercise above. (See code cell below)\n",
+    "3) How long is your final Author dataframe? How long is your final Paper dataframe?\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/6z/7x8_jfbd1d568pbs6s2gs1gm0000gn/T/ipykernel_21194/4023532586.py:7: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
+      "  for id in tqdm_notebook(list(author_database.keys())):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/1922 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "74805fcb2cc04ba7826c52457f693c4d"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[77], line 18\u001B[0m\n\u001B[1;32m     17\u001B[0m \u001B[38;5;66;03m#Author_dataset\u001B[39;00m\n\u001B[0;32m---> 18\u001B[0m data[\u001B[38;5;28mid\u001B[39m][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mname\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m=\u001B[39m  \u001B[43mr\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mname\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m]\u001B[49m\n\u001B[1;32m     19\u001B[0m data[\u001B[38;5;28mid\u001B[39m][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124maliases\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m,\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;241m.\u001B[39mjoin(r[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124maliases\u001B[39m\u001B[38;5;124m'\u001B[39m]) \u001B[38;5;28;01mif\u001B[39;00m r[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124maliases\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m \u001B[38;5;28;01melse\u001B[39;00m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mNone\u001B[39m\u001B[38;5;124m'\u001B[39m\n",
+      "\u001B[0;31mKeyError\u001B[0m: 'name'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[77], line 30\u001B[0m\n\u001B[1;32m     28\u001B[0m   data[\u001B[38;5;28mid\u001B[39m][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mpapers.Authors\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m=\u001B[39m [paper[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mauthors\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;28;01mfor\u001B[39;00m paper \u001B[38;5;129;01min\u001B[39;00m r[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mpapers\u001B[39m\u001B[38;5;124m'\u001B[39m]]\n\u001B[1;32m     29\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m:\n\u001B[0;32m---> 30\u001B[0m   \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m60\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m5\u001B[39;49m\u001B[38;5;241;43m+\u001B[39;49m\u001B[38;5;241;43m10\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m     33\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m query_counter \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m95\u001B[39m:\n\u001B[1;32m     34\u001B[0m   time\u001B[38;5;241m.\u001B[39msleep(\u001B[38;5;241m60\u001B[39m\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m5\u001B[39m\u001B[38;5;241m+\u001B[39m\u001B[38;5;241m10\u001B[39m)\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# Init dataset\n",
+    "data = {id: {} for id in list(author_database.keys())}\n",
+    "\n",
+    "fields = f'name,aliases,papers.title,papers.abstract,papers.year,papers.s2FieldsOfStudy,papers.citationCount,papers.paperId,papers.externalIds,papers.authors'\n",
+    "\n",
+    "query_counter = 0\n",
+    "for id in tqdm_notebook(list(author_database.keys())):\n",
+    "  if id == 'not found':\n",
+    "    continue\n",
+    "\n",
+    "  try:\n",
+    "    my_url = f'https://api.semanticscholar.org/graph/v1/author/{id}?fields={fields}' #BASE_URL + VERSION + RESOURCE\n",
+    "    params = {'authorId': id}\n",
+    "    r = requests.get(my_url, params=params).json()\n",
+    "    query_counter += 1\n",
+    "\n",
+    "    #Author_dataset\n",
+    "    data[id]['name'] =  r['name']\n",
+    "    data[id]['aliases'] = ','.join(r['aliases']) if r['aliases'] is not None else 'None'\n",
+    "    data[id]['papers.title'] = [paper['title'] for paper in r['papers']]\n",
+    "    data[id]['abstract'] = [paper['abstract'] for paper in r['papers']]\n",
+    "    data[id]['papers.year'] = [paper['year'] for paper in r['papers']]\n",
+    "    data[id]['papers.s2FieldsOfStudy'] = [paper['s2FieldsOfStudy'][0]['category'] if len(paper['s2FieldsOfStudy']) != 0 else None for paper in r['papers']]\n",
+    "    data[id]['papers.citationCount'] = [paper['citationCount'] for paper in r['papers']]\n",
+    "\n",
+    "    data[id]['papers.paperId'] = [paper['paperId'] for paper in r['papers']]\n",
+    "    data[id]['papers.DOI'] = [paper['DOI'] if 'DOI' in paper.keys() else 'None' for paper in r['papers']]\n",
+    "    data[id]['papers.Authors'] = [paper['authors'] for paper in r['papers']]\n",
+    "  except:\n",
+    "    time.sleep(60*5+10)\n",
+    "\n",
+    "\n",
+    "  if query_counter > 95:\n",
+    "    time.sleep(60*5+10)\n",
+    "    query_counter = 0\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1922"
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(author_database.keys())"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "95"
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "19*5"
    ],
    "metadata": {
     "collapsed": false
@@ -271,9 +559,7 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [
-    "json.loads('')"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
