Made the key private

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "234ad699",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,8 @@
     "import pandas as pd\n",
     "import time\n",
     "from tqdm.notebook import tqdm\n",
-    "import json"
+    "import json\n",
+    "import yaml"
    ]
   },
   {
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "author_database = pd.read_json('/Users/madsandersen/CompSocialScience/02467-CSS/all_authors.json', typ='series').to_dict()"
@@ -325,10 +326,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
+   "outputs": [],
+   "source": [
+    "# To keep the private api keep safe, we stored in a different file:\n",
+    "with open('api_key.yaml') as f:\n",
+    "    api_key = yaml.safe_load(f)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "n_authors = 10000\n",
+    "api_key = api_key['api_key']\n",
     "Author_dataset = pd.DataFrame(index = list(author_database.keys())[:n_authors],columns = ['name','aliases','citationCount','field'])\n",
     "Ad_fields = ['name','aliases','citationCount','field']\n",
     "\n",
@@ -472,7 +487,7 @@
     "  try:\n",
     "    my_url = f'https://api.semanticscholar.org/graph/v1/author/{id}?fields={fields}' #BASE_URL + VERSION + RESOURCE\n",
     "    params = {'authorId': id}\n",
-    "    headers = {\"x-api-key\": 'e3X5pFPRiu8cWqGesihE3877Nq1Iuf3l88bTUe4Z'}\n",
+    "    headers = {\"x-api-key\": api_key}\n",
     "\n",
     "    r = requests.get(my_url, params=params,headers=headers).json()\n",
     "    query_counter += 1\n",
