More Infomap updates

--- a/Assignment2_part2.ipynb
+++ b/Assignment2_part2.ipynb
@@ -948,33 +948,10 @@
         "!pip install infomap # Install the package in the colab env. "
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0tX2wJhv5w8n",
-        "outputId": "65cfd34f-16fb-4875-99b3-b2519199f1b3"
+        "id": "0tX2wJhv5w8n"
       },
-      "execution_count": 49,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting infomap\n",
-            "  Downloading infomap-2.6.1.tar.gz (262 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m262.1/262.1 KB\u001b[0m \u001b[31m6.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Building wheels for collected packages: infomap\n",
-            "  Building wheel for infomap (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for infomap: filename=infomap-2.6.1-cp39-cp39-linux_x86_64.whl size=8789742 sha256=ce13dfa778eeee0d2bf2de5b82c40485690e8c586ef365260e42aceb2b17e1c0\n",
-            "  Stored in directory: /root/.cache/pip/wheels/a6/da/ca/2027f05b9c1d8e4ac3690e0dc43de43427936c44888d9a1b3c\n",
-            "Successfully built infomap\n",
-            "Installing collected packages: infomap\n",
-            "Successfully installed infomap-2.6.1\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -990,36 +967,75 @@
     {
       "cell_type": "code",
       "source": [
-        "im = Infomap(silent=False,num_trials=20)\n",
-        "im.add_networkx_graph(G_CSS)\n",
+        "im = Infomap(silent=False,num_trials=100,seed=123)\n",
+        "map = im.add_networkx_graph(G_CSS)\n",
         "im.run()"
       ],
       "metadata": {
         "id": "fyiUzHwG8MRk"
       },
-      "execution_count": 85,
+      "execution_count": 106,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(f\"Found {im.num_top_modules} modules with codelength {im.codelength:.8f} bits\")"
+        "print(f\"Found {im.num_top_modules} modules\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "NnNF6YCg90ql",
-        "outputId": "0574c018-1b6b-49d0-a102-cbbdef57fbd1"
+        "outputId": "e4eac36d-92b7-498f-f4aa-4b58c92bf3ef"
       },
-      "execution_count": 86,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Found 847 modules with codelength 5.01254620 bits\n"
+            "Found 847 modules\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Switch out the keys witht the mapping keys\n",
+        "inf_map = im.get_modules()\n",
+        "new_partition = {map[key]: inf_map[key] for key in inf_map.keys()}"
+      ],
+      "metadata": {
+        "id": "_x52JktBEOuD"
+      },
+      "execution_count": 104,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "community_louvain.modularity(new_partition, G_CSS)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KhoSVVjkJKLd",
+        "outputId": "611a7c8b-c8a0-48e5-9641-5d8ac71e07a7"
+      },
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8701706539786521"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 105
         }
       ]
     },
